@@ -4,10 +4,12 @@ import com.example.BlogApplication.model.Post;
 import com.example.BlogApplication.model.Tag;
 import com.example.BlogApplication.repo.PostRepo;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
 import java.sql.Timestamp;
 import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.List;
 
 @Service
@@ -52,8 +54,8 @@ public class PostServiceImpl implements PostService {
     }
 
     @Override
-    public List<Post> getAllPosts() {
-        return postRepo.findAll();
+    public List<Post> getAllPosts(Sort sort) {
+       return (sort.isUnsorted())? postRepo.findAll() : postRepo.findAll(sort);
     }
 
     @Override
@@ -63,12 +65,34 @@ public class PostServiceImpl implements PostService {
     }
 
     @Override
-    public List<Post> searchPosts(String query) {
-        if(query == null || query.trim().isEmpty()){
-            return postRepo.findAll();
+    public List<Post> searchPosts(String query, Sort sort) {
+        if (query == null || query.trim().isEmpty() || query.isBlank()) {
+            return getAllPosts(sort);
         }
+        String kw = query.trim();
+        kw = "%" + kw.toLowerCase()+"%";
 
-        query = "%" +query.toLowerCase() +"%";
-        return postRepo.findBySearchQuery(query);
+        return postRepo.findBySearchQuery(kw,sort);
+    }
+
+    @Override
+    public List<Post> getPostsByAuthorAndTags(Long authorId, List<Long> tagIds,Sort sort) {
+        boolean hasAuthor = (authorId != null);
+        boolean hasTags = (tagIds != null && !tagIds.isEmpty());
+
+        List<Post> result;
+
+        if(hasAuthor && hasTags){
+            result = postRepo.findDistinctByUser_IdAndTags_IdIn(authorId, tagIds);
+        }
+        else if(hasAuthor){
+            result = postRepo.findDistinctByUser_Id(authorId);
+        } else if(hasTags) {
+            result = postRepo.findDistinctByTags_IdIn(tagIds);
+        }
+        else {
+            result = getAllPosts(sort);
+        }
+        return result;
     }
 }
